# LegendOfMir2x

./: .gitignore  CLAUDE.md  CMakeLists.txt  vcpkg.json
client/src/: CMakeLists.txt  acbutton.cpp  alphaonbutton.cpp  ascendstr.cpp  attachmagic.cpp  audioclip.hpp  audiodevice.cpp  audiodevice.hpp  bgmusicdb.cpp  bgmusicdb.hpp  buttonbase.cpp  buttonbase.hpp  checkbox.cpp  checkbox.hpp  checklabel.cpp  checklabel.hpp  client.cpp  client.hpp  clientcreature.cpp  clientcreature.hpp  clientguard.cpp  clientmonster.cpp  clientnpc.cpp  emojidb.cpp  emojidb.hpp  fixedlocmagic.cpp  followuidmagic.cpp  fontexdb.cpp  fontexdb.hpp  fontselector.cpp  fpsmonitor.hpp  gfxcropboard.hpp  gfxdebugboard.cpp  gfxdirbutton.cpp  gfxdupboard.hpp  gfxresizeboard.hpp  gfxshapeboard.cpp  gldevice.cpp  gldevice.hpp  glfont.cpp  (+84 more)
client/src/gui/acutionboard/: acutionboard.cpp
client/src/gui/controlboard/: cbface.cpp  cbleft.cpp  cblevel.cpp  (+6 more)
cmake/: Mir2xDependencies.cmake
common/src/: colorf.hpp
server/src/: CMakeLists.txt  actornetdriver.cpp  actorpool.cpp  dropitemconfig.cpp  main.cpp  mir2x.db3  netdriver.cpp  npchar.cpp  peercore.cpp  server.cpp  serverluamodule.cpp  servermap.cpp  servicecore.cpp
server/src/imguiui/: guicommandwindow.cpp  guicommandwindow.hpp  guicore.cpp  guicore.hpp  guimainwindow.cpp  guimainwindow.hpp  guimodalwindows.cpp  guimodalwindows.hpp  guimonitorwindow.cpp  guimonitorwindow.hpp  guiprofilerwindow.cpp  guiprofilerwindow.hpp  guiscriptwindow.cpp  guiscriptwindow.hpp  serverconfig.hpp
tools/: CMakeLists.txt
tools/herowil2png/src/: CMakeLists.txt
tools/weaponwil2png/src/: CMakeLists.txt
(+32 files in other folders)
